--- a/Dev2AssessorApp/Src/DashboardScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/DashboardScreen.fx.yaml
@@ -684,7 +684,7 @@ DashboardScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-    Image13_1 As image:
+    imgloaderDS As image:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Image: ='ajax-loader 2'
@@ -707,21 +707,21 @@ DashboardScreen As screen:
         Y: =20
         ZIndex: =14
 
-    grPatchSuccessAS_2 As group:
+    grPatchSuccessDS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =40
         ZIndex: =14
 
-        Rectangle1_17 As rectangle:
+        iconOuterRectangleDS As rectangle:
             Fill: =RGBA(0, 0, 0, 0.29)
             Height: =Parent.Height
             Visible: =popupDashSyncSuccess =true
             Width: =Parent.Width
             ZIndex: =8
 
-        Rectangle2_16 As rectangle:
+        iconInnerRectsngleDS As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =270
             Visible: =popupDashSyncSuccess =true
@@ -730,16 +730,16 @@ DashboardScreen As screen:
             Y: =Parent.Height/3
             ZIndex: =9
 
-        Image2_29 As image:
+        imgInfoDS As image:
             Height: =52
             Image: =info
             Visible: =popupDashSyncSuccess =true
             Width: =52
             X: =(Parent.Width-Self.Width)/2
-            Y: =Rectangle2_16.Y+20
+            Y: =iconInnerRectsngleDS.Y+20
             ZIndex: =10
 
-        Label2_18 As label:
+        LblTextDS As label:
             Align: =Align.Center
             Font: =AllScreensCSS.RFont
             FontWeight: =FontWeight.Semibold
@@ -749,10 +749,10 @@ DashboardScreen As screen:
             Visible: =popupDashSyncSuccess =true
             Width: =350
             X: =(Parent.Width-Self.Width)/2
-            Y: =Image2_29.Y+Image2_29.Height
+            Y: =imgInfoDS.Y+imgInfoDS.Height
             ZIndex: =12
 
-        btnSuccess_11 As button:
+        btnSuccessDS As button:
             Fill: =RGBA(54, 176, 75, 1)
             Font: =AllScreensCSS.RFont
             HoverFill: =RGBA(75, 125, 6, 1)
@@ -768,6 +768,6 @@ DashboardScreen As screen:
             Visible: =popupDashSyncSuccess =true
             Width: =120
             X: =(Parent.Width-Self.Width)/2
-            Y: =Label2_18.Y+ Label2_18.Height+5
+            Y: =LblTextDS.Y+ LblTextDS.Height+5
             ZIndex: =13
 
